testsuite/bsc.verilog/splitports/BadSplitInst_PortNameConflict.bs.bsc-vcomp-out.expected
checking package dependencies
compiling BadSplitInst_PortNameConflict.bs
code generation for sysBadSplitInst_PortNameConflict starts
Error: "BadSplitInst_PortNameConflict.bs", line 21, column 0: (G0055)
  Method `putFoo' generates a port with name `fooIn_1_x' which conflicts with
  a port of the same name generated by method `putFoo' at location
  "BadSplitInst_PortNameConflict.bs", line 21, column 0.
